more z-index issues

--- a/src/organisms/domain-search/_domain-search.scss
+++ b/src/organisms/domain-search/_domain-search.scss
@@ -6,7 +6,7 @@
 	&:not(.is-in-mega-menu) {
 		display: none;
 		position: absolute;
-		z-index: 1;
+		z-index: 3;
 		transform: translateY(-107%);
 		transition: transform 0.25s ease-out;
 		box-shadow: 0 rhythm(0.5) rhythm(0.5) rgba($color-cyberspace, 0.1);
