--- a/src/organisms/header/_header.scss
+++ b/src/organisms/header/_header.scss
@@ -2,7 +2,7 @@
 
 @include organism(header) {
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 	border-bottom: 1px solid $color-ash;
 	background-color: $color-snow;
 
